--- a/account/templates/settings.html
+++ b/account/templates/settings.html
@@ -119,7 +119,7 @@ Header START -->
 						<ul class="dropdown-menu" aria-labelledby="homeMenu">
 							<li> <a class="dropdown-item" href="/home">Anasayfa</a></li>
 							<li> <a class="dropdown-item" href="/profil">Profil</a></li>
-							<li> <a class="dropdown-item" href="/error">Harita</a></li>
+							<li> <a class="dropdown-item" href="/map">Harita</a></li>
 						</ul>
 					</li>
 					<!-- Nav item 2 Pages -->
